--- a/styles/styles.css
+++ b/styles/styles.css
@@ -384,6 +384,10 @@ header p {
 header button {
   font-size: 1rem;
   margin-top: 30px;
+  position: relative;
+  top: 8%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 @media (min-width: 340px) {
@@ -392,6 +396,9 @@ header button {
   }
   header p {
     margin-top: 40px;
+  }
+  header p header button {
+    top: 10%;
   }
 }
 
